k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: commerce-dev
  labels:
    name: commerce-dev
    environment: development
