k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerce-ingress
  namespace: commerce-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: commerce.local
    http:
      paths:
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: system-monitor-service
            port:
              number: 3006
      - path: /api/product-mdm
        pathType: Prefix
        backend:
          service:
            name: product-mdm-api-service
            port:
              number: 6001
      - path: /rabbitmq
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-management
            port:
              number: 15672
